Minor change to the configuration of "About" plugin to make it visible both in BurgerMenu and SidebarMenu

--- a/configs/localConfig.json
+++ b/configs/localConfig.json
@@ -432,7 +432,8 @@
               "cfg": {
                 "showAPI": false,
                 "advancedSettings": {
-                  "bbox": true
+                  "bbox": true,
+                  "centerAndZoom": true
                 }
               }
             },
@@ -556,11 +557,8 @@
                 "cfg": {
                     "wrap": true
                 }
-            }, {
-              "name": "About",
-              "showIn": ["BurgerMenu"]
-            }
-            , {
+            }, "About",
+            {
               "name": "MousePosition",
               "cfg": {
                 "editCRS": true,
